# big-trip-server-rs

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build-app.yml
migrations/: 20250319180334_initial.sql  20250319181244_provision_activities.sql  20250319181359_provision_destinations.sql
src/: crud.rs  handlers.rs  main.rs  models.rs  settings.rs
