[package]
name = "big-trip-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
config = "0.15.11"
env_logger = "0.11.7"
sentry = { version = "0.36.0", default-features = false, features = ["contexts", "backtrace", "panic", "debug-images", "ureq", "rustls"] }
sentry-actix = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["derive", "json", "migrate", "postgres", "runtime-tokio", "time", "uuid"] }
time = { version = "0.3.40", features = ["serde-well-known"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
